# forge-xad

./: .gitignore  .gitmodules  CMakeLists.txt  CURRENT_STATUS.md  README.md
docs/: XAD_TAPE_FORMAT.md
examples/: CMakeLists.txt  debug_tape_recording.cpp  jit_tape_debug.cpp  jit_tape_example.cpp  jit_tape_minimal.cpp  jit_tape_simple.cpp  simple_function_test.cpp  test_converter.cpp  test_opcode.cpp  xad_baseline.cpp  xad_forge_integration.cpp
include/forge_xad/: jit_tape.hpp  operation_inference.hpp  xad_tape_converter.hpp
src/: operation_inference.cpp  xad_tape_converter.cpp
tests/: CMakeLists.txt
