# Tests for Forge-XAD integration
# TODO: Add tests once converter is implemented

# Placeholder for now
message(STATUS "Tests directory - TODO: Add unit tests")

# Uncomment when ready to add tests:
# add_executable(test_converter
#     test_converter.cpp
# )
# target_link_libraries(test_converter PRIVATE
#     forge_xad_bridge
#     gtest_main
# )
# add_test(NAME test_converter COMMAND test_converter)
